--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MVP do mapa para igor",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "file-loader": "^6.2.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
